[tool.poetry]
name = "valid"
version = "0.1.0"
description = ""
authors = ["zhanazhyl <97686763+zhanazhyl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask-RESTful = "^0.3.9"
pydantic = "^1.9.0"
Flask-Pydantic = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
